 * fix site_url AttributeError reported by user on password reset (rmarianski)
 * revert changes to login in current thread due to side effects (rmarianski)
 * reindex member project_ids when joining/leaving project (rmarianski)
 * lookup path to images dynamically to allow for overrides (rmarianski)
 * fix user reported UnboundLocalError on pending page (rmarianski)

0.11.2 (2008-05-27)
===================
 * Square member portrait thumbnails at (80,80) and (50,50) (rmarianski)
 * Square project logos at (80,80) and (50,50) (rmarianski)

0.11.1 (2008-05-20)
=================
 * New infrastructure for embedded host whitelist; add some sites (jhammel)
 * Allow for wicked links with HTML escapes and non-UTF-8 characters (jhammel)
 * Fix "wiki" link and text in user's dropdown nav - it's now "pages" (slinkp)
 * Highlight correct topnav tab on user profile (rmarianski, jhammel)
 * Display topnav tabs on news items (rmarianski)
 * Optimizations of mailing list recent activity feed (jhammel)
 * Optimizations of team recent activity feed (jhammel)
 * List featurelets installed in project in project info xml (ejucovy)
 * EmailSender itself now generates message (rmarianski)
 * Add /message to list of pages that we don't redirect to (rmarianski)
 * Read twirlip uri from IProvideSiteConfig instead of persistent properties sheet (ejucovy)
 * Remove unused cabochon uri from properties sheet (ejucovy)
 * Create links to people pages on transient messages (rmarianski)
 * Fixed listen moderation ui (cabraham)
 * Fixed wordpress redirect for blogs on closed projects (douglas)
 * Updated translation infrastructure to accomodate new copy (cabraham)
 * Re-enable optional oc-geotagging plugin, now via viewlets; it will be
   used iff oc-geotagging is installed. Still a work in progress. (slinkp)
 * Remove all calls to configuration.utils.get_config; instead use
   an IProvideSiteConfig implementation. (slinkp)
 * Delete a bunch of Kupu-specific cruft. (slinkp)

0.10 (2008-04-23)