@@ -13,6 +13,7 @@
  * reindex member project_ids when joining/leaving project (rmarianski)
  * lookup path to images dynamically to allow for overrides (rmarianski)
  * fix user reported UnboundLocalError on pending page (rmarianski)
+ * possibly resolve user reported error on attachment delete (rmarianski)
 
 0.11.2 (2008-05-27)
 ===================
